# threestarRL

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/barracks/: __init__.py
app/cartographer/: README.md  __init__.py  __main__.py  align.py  calibration.py  cli.py  detect.py  diagnostic.py  emit.py  grid.py  pipeline.py  preprocess.py  server.py  walls.py
app/data/: README.md  buildings.json  cartographer_calibration.json  cartographer_config.json  manual_overrides.json  spells.json  sprite_calibrations.json  th_caps.json  traps.json  troops.json
app/docs/: idea.md  prd.md  roadmap.md  technical.md  ubiquitous-language.md
app/experiments/: README.md
app/sandbox_core/: __init__.py  cli.py  combat.py  content.py  grid.py  replay.py  schemas.py  scoring.py  sim.py  splash.py
app/sandbox_web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: agent.md  idea.md
issues/done/: 004-wiki-scraper-and-overrides-loader.md  010-full-th6-integrative-golden-replay.md  014-iso-renderer-and-sprite-loading.md  015-manual-editor-placement-and-validation.md  016-manual-editor-wall-paint-and-erase.md  017-manual-editor-export-import-autosave-undo.md  022-schema-migration-scaffolding.md  024-cartographer-schema-bump-v2.md  025-cartographer-package-skeleton-cli-tracer.md  028-cartographer-grass-grid-derivation.md  (+4 more)
ralph/: afk.sh  once.sh  prompt.md
scripts/: roboflow_smoke.py
tests/: conftest.py
(+170 files in other folders)
