[project]
name = "threestarrl"
version = "0.1.0"
description = "A Clash of Clans-style attack simulator and RL environment for studying base-attacking strategy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "EvanJohnstone48" }]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "sb3-contrib>=2.3",
    "torch>=2.2",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
cartographer = [
    "inference-sdk>=0.9",
    "opencv-python>=4.9",
    "pillow>=10.0",
]
wandb = ["wandb>=0.16"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1.360",
    "pre-commit>=3.7",
    "datamodel-code-generator>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/sandbox_core", "app/barracks", "app/cartographer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (golden replays, integration, smoke training) — skipped in pre-commit, run in CI",
]
addopts = "-ra --strict-markers"
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
